tests/snapshots/fixtures_snapshot__fixtures__raw_data__csharp__file_with_label_sas7bdat.snap
---
source: tests/fixtures_snapshot.rs
expression: snapshot.clone()
---
{
  "columns": [
    "a",
    "b"
  ],
  "row_count": 2,
  "rows": [
    [
      {
        "kind": "number",
        "value": 1.0
      },
      {
        "kind": "number",
        "value": 2.0
      }
    ],
    [
      {
        "kind": "number",
        "value": 3.0
      },
      {
        "kind": "number",
        "value": 4.0
      }
    ]
  ]
}
