tests/snapshots/fixtures_snapshot__fixtures__raw_data__csharp__mix_and_missing_sas7bdat.snap
---
source: tests/fixtures_snapshot.rs
expression: snapshot.clone()
---
{
  "columns": [
    "x1",
    "x2",
    "x3",
    "x4",
    "x5"
  ],
  "row_count": 48,
  "rows": [
    [
      {
        "kind": "number",
        "value": 1.0
      },
      {
        "kind": "missing",
        "value": null
      },
      {
        "kind": "string",
        "value": "1"
      },
      {
        "kind": "string",
        "value": ""
      },
      {
        "kind": "string",
        "value": "1"
      }
    ],
    [
      {
        "kind": "number",
        "value": 2.0
      },
      {
        "kind": "number",
        "value": 2.0
      },
      {
        "kind": "string",
        "value": ""
      },
      {
        "kind": "string",
        "value": "2"
      },
      {
        "kind": "string",
        "value": "2"
      }
    ],
    [
      {
        "kind": "number",
        "value": 3.0
      },
      {
        "kind": "number",
        "value": 3.0
      },
      {
        "kind": "string",
        "value": ""
      },
      {
        "kind": "string",
        "value": "3"
      },
      {
        "kind": "string",
        "value": "3"
      }
    ],
    [
      {
        "kind": "number",
        "value": 1.0
      },
      {
        "kind": "missing",
        "value": null
      },
      {
        "kind": "string",
        "value": "1"
      },
      {
        "kind": "string",
        "value": ""
      },
      {
        "kind": "string",
        "value": "1"
      }
    ],
    [
      {
        "kind": "number",
        "value": 2.0
      },
      {
        "kind": "number",
        "value": 2.0
      },
      {
        "kind": "string",
        "value": ""
      },
      {
        "kind": "string",
        "value": "2"
      },
      {
        "kind": "string",
        "value": "2"
      }
    ],
    [
      {
        "kind": "number",
        "value": 3.0
      },
      {
        "kind": "number",
        "value": 3.0
      },
      {
        "kind": "string",
        "value": ""
      },
      {
        "kind": "string",
        "value": "3"
      },
      {
        "kind": "string",
        "value": "3"
      }
    ],
    [
      {
        "kind": "number",
        "value": 1.0
      },
      {
        "kind": "missing",
        "value": null
      },
      {
        "kind": "string",
        "value": "1"
      },
      {
        "kind": "string",
        "value": ""
      },
      {
        "kind": "string",
        "value": "1"
      }
    ],
    [
      {
        "kind": "number",
        "value": 2.0
      },
      {
        "kind": "number",
        "value": 2.0
      },
      {
        "kind": "string",
        "value": ""
      },
      {
        "kind": "string",
        "value": "2"
      },
      {
        "kind": "string",
        "value": "2"
      }
    ],
    [
      {
        "kind": "number",
        "value": 3.0
      },
      {
        "kind": "number",
        "value": 3.0
      },
      {
        "kind": "string",
        "value": ""
      },
      {
        "kind": "string",
        "value": "3"
      },
      {
        "kind": "string",
        "value": "3"
      }
    ],
    [
      {
        "kind": "number",
        "value": 1.0
      },
      {
        "kind": "missing",
        "value": null
      },
      {
        "kind": "string",
        "value": "1"
      },
      {
        "kind": "string",
        "value": ""
      },
      {
        "kind": "string",
        "value": "1"
      }
    ],
    [
      {
        "kind": "number",
        "value": 2.0
      },
      {
        "kind": "number",
        "value": 2.0
      },
      {
        "kind": "string",
        "value": ""
      },
      {
        "kind": "string",
        "value": "2"
      },
      {
        "kind": "string",
        "value": "2"
      }
    ],
    [
      {
        "kind": "number",
        "value": 3.0
      },
      {
        "kind": "number",
        "value": 3.0
      },
      {
        "kind": "string",
        "value": ""
      },
      {
        "kind": "string",
        "value": "3"
      },
      {
        "kind": "string",
        "value": "3"
      }
    ],
    [
      {
        "kind": "number",
        "value": 1.0
      },
      {
        "kind": "missing",
        "value": null
      },
      {
        "kind": "string",
        "value": "1"
      },
      {
        "kind": "string",
        "value": ""
      },
      {
        "kind": "string",
        "value": "1"
      }
    ],
    [
      {
        "kind": "number",
        "value": 2.0
      },
      {
        "kind": "number",
        "value": 2.0
      },
      {
        "kind": "string",
        "value": ""
      },
      {
        "kind": "string",
        "value": "2"
      },
      {
        "kind": "string",
        "value": "2"
      }
    ],
    [
      {
        "kind": "number",
        "value": 3.0
      },
      {
        "kind": "number",
        "value": 3.0
      },
      {
        "kind": "string",
        "value": ""
      },
      {
        "kind": "string",
        "value": "3"
      },
      {
        "kind": "string",
        "value": "3"
      }
    ],
    [
      {
        "kind": "number",
        "value": 1.0
      },
      {
        "kind": "missing",
        "value": null
      },
      {
        "kind": "string",
        "value": "1"
      },
      {
        "kind": "string",
        "value": ""
      },
      {
        "kind": "string",
        "value": "1"
      }
    ],
    [
      {
        "kind": "number",
        "value": 2.0
      },
      {
        "kind": "number",
        "value": 2.0
      },
      {
        "kind": "string",
        "value": ""
      },
      {
        "kind": "string",
        "value": "2"
      },
      {
        "kind": "string",
        "value": "2"
      }
    ],
    [
      {
        "kind": "number",
        "value": 3.0
      },
      {
        "kind": "number",
        "value": 3.0
      },
      {
        "kind": "string",
        "value": ""
      },
      {
        "kind": "string",
        "value": "3"
      },
      {
        "kind": "string",
        "value": "3"
      }
    ],
    [
      {
        "kind": "number",
        "value": 1.0
      },
      {
        "kind": "missing",
        "value": null
      },
      {
        "kind": "string",
        "value": "1"
      },
      {
        "kind": "string",
        "value": ""
      },
      {
        "kind": "string",
        "value": "1"
      }
    ],
    [
      {
        "kind": "number",
        "value": 2.0
      },
      {
        "kind": "number",
        "value": 2.0
      },
      {
        "kind": "string",
        "value": ""
      },
      {
        "kind": "string",
        "value": "2"
      },
      {
        "kind": "string",
        "value": "2"
      }
    ],
    [
      {
        "kind": "number",
        "value": 3.0
      },
      {
        "kind": "number",
        "value": 3.0
      },
      {
        "kind": "string",
        "value": ""
      },
      {
        "kind": "string",
        "value": "3"
      },
      {
        "kind": "string",
        "value": "3"
      }
    ],
    [
      {
        "kind": "number",
        "value": 1.0
      },
      {
        "kind": "missing",
        "value": null
      },
      {
        "kind": "string",
        "value": "1"
      },
      {
        "kind": "string",
        "value": ""
      },
      {
        "kind": "string",
        "value": "1"
      }
    ],
    [
      {
        "kind": "number",
        "value": 2.0
      },
      {
        "kind": "number",
        "value": 2.0
      },
      {
        "kind": "string",
        "value": ""
      },
      {
        "kind": "string",
        "value": "2"
      },
      {
        "kind": "string",
        "value": "2"
      }
    ],
    [
      {
        "kind": "number",
        "value": 3.0
      },
      {
        "kind": "number",
        "value": 3.0
      },
      {
        "kind": "string",
        "value": ""
      },
      {
        "kind": "string",
        "value": "3"
      },
      {
        "kind": "string",
        "value": "3"
      }
    ],
    [
      {
        "kind": "number",
        "value": 1.0
      },
      {
        "kind": "missing",
        "value": null
      },
      {
        "kind": "string",
        "value": "1"
      },
      {
        "kind": "string",
        "value": ""
      },
      {
        "kind": "string",
        "value": "1"
      }
    ],
    [
      {
        "kind": "number",
        "value": 2.0
      },
      {
        "kind": "number",
        "value": 2.0
      },
      {
        "kind": "string",
        "value": ""
      },
      {
        "kind": "string",
        "value": "2"
      },
      {
        "kind": "string",
        "value": "2"
      }
    ],
    [
      {
        "kind": "number",
        "value": 3.0
      },
      {
        "kind": "number",
        "value": 3.0
      },
      {
        "kind": "string",
        "value": ""
      },
      {
        "kind": "string",
        "value": "3"
      },
      {
        "kind": "string",
        "value": "3"
      }
    ],
    [
      {
        "kind": "number",
        "value": 1.0
      },
      {
        "kind": "missing",
        "value": null
      },
      {
        "kind": "string",
        "value": "1"
      },
      {
        "kind": "string",
        "value": ""
      },
      {
        "kind": "string",
        "value": "1"
      }
    ],
    [
      {
        "kind": "number",
        "value": 2.0
      },
      {
        "kind": "number",
        "value": 2.0
      },
      {
        "kind": "string",
        "value": ""
      },
      {
        "kind": "string",
        "value": "2"
      },
      {
        "kind": "string",
        "value": "2"
      }
    ],
    [
      {
        "kind": "number",
        "value": 3.0
      },
      {
        "kind": "number",
        "value": 3.0
      },
      {
        "kind": "string",
        "value": ""
      },
      {
        "kind": "string",
        "value": "3"
      },
      {
        "kind": "string",
        "value": "3"
      }
    ],
    [
      {
        "kind": "number",
        "value": 1.0
      },
      {
        "kind": "missing",
        "value": null
      },
      {
        "kind": "string",
        "value": "1"
      },
      {
        "kind": "string",
        "value": ""
      },
      {
        "kind": "string",
        "value": "1"
      }
    ],
    [
      {
        "kind": "number",
        "value": 2.0
      },
      {
        "kind": "number",
        "value": 2.0
      },
      {
        "kind": "string",
        "value": ""
      },
      {
        "kind": "string",
        "value": "2"
      },
      {
        "kind": "string",
        "value": "2"
      }
    ],
    [
      {
        "kind": "number",
        "value": 3.0
      },
      {
        "kind": "number",
        "value": 3.0
      },
      {
        "kind": "string",
        "value": ""
      },
      {
        "kind": "string",
        "value": "3"
      },
      {
        "kind": "string",
        "value": "3"
      }
    ],
    [
      {
        "kind": "number",
        "value": 1.0
      },
      {
        "kind": "missing",
        "value": null
      },
      {
        "kind": "string",
        "value": "1"
      },
      {
        "kind": "string",
        "value": ""
      },
      {
        "kind": "string",
        "value": "1"
      }
    ],
    [
      {
        "kind": "number",
        "value": 2.0
      },
      {
        "kind": "number",
        "value": 2.0
      },
      {
        "kind": "string",
        "value": ""
      },
      {
        "kind": "string",
        "value": "2"
      },
      {
        "kind": "string",
        "value": "2"
      }
    ],
    [
      {
        "kind": "number",
        "value": 3.0
      },
      {
        "kind": "number",
        "value": 3.0
      },
      {
        "kind": "string",
        "value": ""
      },
      {
        "kind": "string",
        "value": "3"
      },
      {
        "kind": "string",
        "value": "3"
      }
    ],
    [
      {
        "kind": "number",
        "value": 1.0
      },
      {
        "kind": "missing",
        "value": null
      },
      {
        "kind": "string",
        "value": "1"
      },
      {
        "kind": "string",
        "value": ""
      },
      {
        "kind": "string",
        "value": "1"
      }
    ],
    [
      {
        "kind": "number",
        "value": 2.0
      },
      {
        "kind": "number",
        "value": 2.0
      },
      {
        "kind": "string",
        "value": ""
      },
      {
        "kind": "string",
        "value": "2"
      },
      {
        "kind": "string",
        "value": "2"
      }
    ],
    [
      {
        "kind": "number",
        "value": 3.0
      },
      {
        "kind": "number",
        "value": 3.0
      },
      {
        "kind": "string",
        "value": ""
      },
      {
        "kind": "string",
        "value": "3"
      },
      {
        "kind": "string",
        "value": "3"
      }
    ],
    [
      {
        "kind": "number",
        "value": 1.0
      },
      {
        "kind": "missing",
        "value": null
      },
      {
        "kind": "string",
        "value": "1"
      },
      {
        "kind": "string",
        "value": ""
      },
      {
        "kind": "string",
        "value": "1"
      }
    ],
    [
      {
        "kind": "number",
        "value": 2.0
      },
      {
        "kind": "number",
        "value": 2.0
      },
      {
        "kind": "string",
        "value": ""
      },
      {
        "kind": "string",
        "value": "2"
      },
      {
        "kind": "string",
        "value": "2"
      }
    ],
    [
      {
        "kind": "number",
        "value": 3.0
      },
      {
        "kind": "number",
        "value": 3.0
      },
      {
        "kind": "string",
        "value": ""
      },
      {
        "kind": "string",
        "value": "3"
      },
      {
        "kind": "string",
        "value": "3"
      }
    ],
    [
      {
        "kind": "number",
        "value": 1.0
      },
      {
        "kind": "missing",
        "value": null
      },
      {
        "kind": "string",
        "value": "1"
      },
      {
        "kind": "string",
        "value": ""
      },
      {
        "kind": "string",
        "value": "1"
      }
    ],
    [
      {
        "kind": "number",
        "value": 2.0
      },
      {
        "kind": "number",
        "value": 2.0
      },
      {
        "kind": "string",
        "value": ""
      },
      {
        "kind": "string",
        "value": "2"
      },
      {
        "kind": "string",
        "value": "2"
      }
    ],
    [
      {
        "kind": "number",
        "value": 3.0
      },
      {
        "kind": "number",
        "value": 3.0
      },
      {
        "kind": "string",
        "value": ""
      },
      {
        "kind": "string",
        "value": "3"
      },
      {
        "kind": "string",
        "value": "3"
      }
    ],
    [
      {
        "kind": "number",
        "value": 1.0
      },
      {
        "kind": "missing",
        "value": null
      },
      {
        "kind": "string",
        "value": "1"
      },
      {
        "kind": "string",
        "value": ""
      },
      {
        "kind": "string",
        "value": "1"
      }
    ],
    [
      {
        "kind": "number",
        "value": 2.0
      },
      {
        "kind": "number",
        "value": 2.0
      },
      {
        "kind": "string",
        "value": ""
      },
      {
        "kind": "string",
        "value": "2"
      },
      {
        "kind": "string",
        "value": "2"
      }
    ],
    [
      {
        "kind": "number",
        "value": 3.0
      },
      {
        "kind": "number",
        "value": 3.0
      },
      {
        "kind": "string",
        "value": ""
      },
      {
        "kind": "string",
        "value": "3"
      },
      {
        "kind": "string",
        "value": "3"
      }
    ]
  ]
}
