tests/snapshots/fixtures_snapshot__fixtures__raw_data__csharp__time_formats_sas7bdat.snap
---
source: tests/fixtures_snapshot.rs
expression: snapshot
---
{
  "columns": [
    "E8601LZ",
    "E8601TM",
    "HHMM",
    "HOUR",
    "MMSS",
    "TIME",
    "TIMEAMPM"
  ],
  "row_count": 1,
  "rows": [
    [
      {
        "kind": "number",
        "value": 36610.0
      },
      {
        "kind": "time",
        "value": 36610.0
      },
      {
        "kind": "time",
        "value": 36610.0
      },
      {
        "kind": "number",
        "value": 36610.0
      },
      {
        "kind": "number",
        "value": 36610.0
      },
      {
        "kind": "time",
        "value": 36610.0
      },
      {
        "kind": "time",
        "value": 36610.0
      }
    ]
  ]
}
